--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "arweave": "^1.6.0",
+    "dotenv": "^8.2.0",
     "iexcloud_api_wrapper": "^1.1.5"
-  }
+  },
+  "devDependencies": {}
 }
